Update html templates

--- a/emscripten_html_template/template.html
+++ b/emscripten_html_template/template.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Raylib Web</title>
+    <title>ProtoApp</title>
     <style>
         body { 
             margin: 0; 
